--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "helpful-utils",
+  "name": "easy-helpful-utils",
   "version": "1.0.0",
   "description": "一些常用工具方法的集合",
   "main": "index.js",
